--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
-  "scripts": {
-    "dev": "vite --host",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "preview": "vite preview --host",
-    "check": "tsc --noEmit",
-    "format": "prettier --write ."
-  },
+"scripts": {
+  "dev": "vite --host",
+  "build:client": "vite build",
+  "build:server": "esbuild server/index.ts --platform=node --bundle --format=esm --outfile=dist/server.js",
+  "build": "pnpm run build:client",
+  "start": "node dist/server.js",
+  "preview": "vite preview --host",
+  "check": "tsc --noEmit",
+  "format": "prettier --write ."
+}
+
   "dependencies": {
     "-": "^0.0.1",
     "@hookform/resolvers": "^5.2.2",
@@ -44,7 +47,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "commit": "^0.0.4",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "framer-motion": "^12.23.22",
@@ -54,7 +56,6 @@
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "pnpm-lock.yaml": "^1.0.0",
-    "push": "^0.1.1",
     "react": "^19.2.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.1",
