--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
-"scripts": {
-  "dev": "vite --host",
-  "build:client": "vite build",
-  "build:server": "esbuild server/index.ts --platform=node --bundle --format=esm --outfile=dist/server.js",
-  "build": "pnpm run build:client",
-  "start": "node dist/server.js",
-  "preview": "vite preview --host",
-  "check": "tsc --noEmit",
-  "format": "prettier --write ."
-}
-
+  "scripts": {
+    "dev": "vite --host",
+    "build:client": "vite build",
+    "build:server": "esbuild server/index.ts --platform=node --bundle --format=esm --outfile=dist/server.js",
+    "build": "pnpm run build:client",
+    "start": "node dist/server.js",
+    "preview": "vite preview --host",
+    "check": "tsc --noEmit",
+    "format": "prettier --write ."
+  },
   "dependencies": {
-    "-": "^0.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -50,12 +48,10 @@
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "framer-motion": "^12.23.22",
-    "git": "^0.1.5",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
-    "pnpm-lock.yaml": "^1.0.0",
     "react": "^19.2.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.1",
@@ -79,10 +75,8 @@
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
     "@vitejs/plugin-react": "^5.0.4",
-    "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
     "esbuild": "^0.25.0",
-    "pnpm": "^10.28.2",
     "postcss": "^8.4.47",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.14",
@@ -93,7 +87,7 @@
     "vite-plugin-manus-runtime": "^0.0.57",
     "vitest": "^2.1.4"
   },
-  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
+  "packageManager": "pnpm@10.4.1",
   "pnpm": {
     "patchedDependencies": {
       "wouter@3.7.1": "patches/wouter@3.7.1.patch"
